# bitorch

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  AUTHORS  CHANGELOG.md  MANIFEST.in  README.md  check-codestyle.sh  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-opt.txt  requirements-optional.txt  requirements.txt  setup.cfg  setup.py  test.py  version.txt
bitorch/: __init__.py  config.py  runtime_mode.py  util.py
bitorch/activations/: config.py  pact.py  round.py  sign.py
bitorch/datasets/: __init__.py  base.py  cifar.py  cifar10.py  dummy_dataset.py  imagenet.py  mnist.py
bitorch/layers/: Sign.py  WeightClip.py  __init__.py  bembedding.py  config.py  debug_layers.py  layer_registry.py  layerconfig.py  pact.py  pad.py  qactivation.py  qconv.py  qconv1d.py  qconv2d.py  qconv3d.py  qconv_mixin.py  qconv_noact.py  qconvolution.py  qdense.py  qembedding.py  qlinear.py  register.py  sign.py
bitorch/models/: __init__.py  base.py  common_layers.py  densenet.py  dlrm.py  lenet.py  meliusnet.py  model_hub.py  quicknet.py  resnet.py  resnet_e.py
bitorch/optimization/: __init__.py  radam.py
bitorch/quantizations/: __init__.py  approx_sign.py  approxsign.py  base.py  config.py  dorefa.py  identity.py  progressive_sign.py  quantization.py  quantization_scheduler.py  round.py  sign.py  ste_heaviside.py  steheaviside.py  swish_sign.py  swishsign.py
docs/bitorch/: config.md  index.md  util.md
docs/source/: Introduction_to_Bitorch.nblink  build_docs.rst  conf.py  documentation.rst  getting_started.rst  index.rst  installation.rst
docs/template/: config.mako
examples/: __init__.py  arg_parser.py  cifar10-resnet.py  image-classification.py  imagenet-resnet.py  mnist-lenet.py  mnist-resnet.py  requirements.txt  train.py
examples/dlrm/: README.md  (+2 more)
scripts/: config.json  sync_model_hub.py  sync_wandb_nextcloud_hub.py
tests/: test_argparse.py  test_configs.py  test_mode.py  test_nothing.py  test_runtime_mode.py
(+168 files in other folders)
