[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
ignore = F401,E402,F403,W503,W504,F821,DAR103,D400,D401,D403,D107,D205,D204,E402
exclude = venv, tests

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring
