[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
exclude =
    .git,
    .venv,
    venv,
    dist
    tests
select = C,E,F,W,B,B950
ignore =
    D107,
    D204,
    D205,
    D400,
    D401,
    D403,
    DAR103,
    E203,
    E402,
    E402,
    E501,
    F401,
    F403,
    F821,
    W503,
    W504,

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring
