[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
exclude =
    .git,
    .venv,
    venv,
    dist,
    tests,
    examples/mnist
select = C,D,E,F,W,B,B950
ignore =
    D100,
    # D100: Missing docstring in public module
    D101,
    # D101: Missing docstring in public class
    D102,
    # D102: Missing docstring in public method
    D105,
    # D105: Missing docstring in magic method
    D107,
    # D107: Missing docstring in __init__
    D204,
    # D204: 1 blank line required after class docstring
    D205,
    # D205: 1 blank line required between summary line and description
    D400,
    # D400: First line should end with a period
    D401,
    # D401: First line should be in imperative mood
    D403,
    # D403: First word of the first line should be properly capitalized
    DAR103,
    # DAR103: The docstring parameter type doesn't match function.
    E501,
    # E501: Line too long (82 > 79 characters)

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring
